jartto:fix index007 overflow bugs

--- a/mobile/css/theme/theme007.less
+++ b/mobile/css/theme/theme007.less
@@ -23,6 +23,7 @@
     backgroung-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    overflow: hidden;
 }
 
 .theme7_ul{
